--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="location_permission_denied">Denied</string>
     <string name="permission_required_toast">Required</string>
     <string name="permission_rationale_location">Rationale location</string>
-    <string name="name_text">Enter a name</string>
+    <string name="search_text"></string>
+    <color name="white">#FFFFFF</color>
 </resources>
